css/main.css
html,body{
    height: 100%;
    width: 100%;
    margin: 0;
}

#trivia-section{
    background: white;
    height: 100%;
    text-align: center;
    font-size: 138%;

}

#question{
    color: black;
}

#div_question{
    position: relative;
    top: 25%;
}

#btnBack_trivia{
    position: absolute;
    top: 2%;
    left: 3%;
    width: 10%;
}

#block{
    position: relative;
}

#block_div{
    position: fixed;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
}

#charge{
    position: relative;
}

#charge_title{
    padding-top: 53%;
    padding-left: 37%;
}

#charge_div{
    position: fixed;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    background-color: yellow;
    align-items: center;
}

#answers_div{
    position: relative;
    top: 40%;
    width: 80%;
    left: 10%;
}

.invisible{
    display: none !important;
}

.answer{
    background: white;
    margin-top: 10%;
    border-radius: 22px;
    border-style: solid;
    border-width: 2px;
}

.animation {
    -webkit-animation: animate .6s linear; 
}

.wrongAnswer{
    border-color: red;
}

.correctAnswer{
    border-color: green;
}

@-webkit-keyframes animate {
    0% {
        -webkit-transform: translate(0px, 0px);
    }
    10% {
        -webkit-transform: translate(5px, 0px);
    }
    20% {
        -webkit-transform: translate(0px, 0px);
    }
    30% {
        -webkit-transform: translate(5px, 0px);
    }
    40% {   
        -webkit-transform: translate(0px, 0px);
    }
    50% {
        -webkit-transform: translate(5px, 0px);
    }
    60% {
        -webkit-transform: translate(0px, 0px);
    }
    70% {
        -webkit-transform: translate(5px, 0px);
    }
    80% {   
        -webkit-transform: translate(0px, 0px);
    }
    90%{
        -webkit-transform: translate(5px, 0px);
    }
    100%{
        -webkit-transform: translate(0px, 0px);
    }
}

/* -------------- Plants Section -------------- */

#plant-image{
   display: block;
   width: 320px;
   height: 320px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%; 

   background: blue;

}

#plants-section{
    display: flexbox;
    width: 100%;
    height: 100%;
    background: red;
    
}

#plant-description{
    position: absolute;
    width: 100%;
    height: 40%;
    background:rgb(58, 68, 82);
    border-top-right-radius: 15%;
    border-top-left-radius: 15%;
    margin-top: 5%;
    bottom: 0px;
}

#plant-description p{
    display: inline-flexbox;
    margin: 10%;
    text-align: center;
    color: ivory;
    margin-left: auto;
    margin-right: auto;
}

#buttonsdiv{
   /* background: blue; */
   text-align: center;
   /* height: auto; */
   height: 56%;
}

.navigation-button{
    border-radius: 3%;
    width: 50%;
    height: 15%;
    margin: 5%;
    
}

/* -----------main menu and credits------------*/
h1{
    position: absolute;
    top: 20%;
    width: 80%;
    left: 10%;
    font-size: 210%;
    color:whitesmoke;
}

.text{
    font-family: Arial, Helvetica, sans-serif;
    color: whitesmoke;
}

h1,.button-menu,.container{
    text-align: center;
}

p{
    font-size: 150%;
}

.button-menu{
    font-size: 150%;
    width:80%;
    height: 50px;
    margin-bottom:20px;
    border-radius: 50px;
    color: whitesmoke;
    background:#298E7D;
    
}

.container{
    position: absolute;
    width: 50%;
    left: 25%;
}

.sections {
    height: 100%;
    animation: transitionSection;
    animation-duration: 0.5s;
    
}


#main-section{
    background-color: whitesmoke;
}

#image{
    position: absolute;
    top: -30%;
    bottom: 0;
    left: 0;
    right: 0;
    width: 35%;
    height: 35%;
    margin: auto;
    
}

#credits-section{
    background-color: #298E7D;
}


#divButtons{
    top: 65%;
}

#divCredits{
    
    top: 35%;
   
}

/*transitions*/
@keyframes transitionSection{

    
    
    from{

        opacity: 0;
        transform: translateY(450px);
       
    }

    to{

        opacity: 1;
        transform: translateY(0px);
      

    }
    

}

